#VERSION 0.9.6#

 - fixed extended class name typo in Peak_View_Helper_Debugbar
 - added method saveTransaction() to class Peak_Model_Zendatable
 - removed deprecated class Peak_View_Helper_Calendar
 - renamed helpers file with first capital letter
 - fixed table/schema name in _getData() of class Peak_Model_Pagination
 - fixed old bug in class "Peak_Helpers" that prevented methods __get() and exists() from sometimes validate a file's existence 
   on an case sensitive os.
 - added method getLanguages() to Peak_Controller_Helper_Request
 - added an auto-detect file extension to Peak_View_Helper_assets
 - added method renderArray() to Peak_View_Render. This new method we use method render() for each files.
 - added a new exception constant ERR_VIEW_FILE_NOT_FOUND to Peak_View_Exception
 - changed the default path used by method render() in Peak_View_Render_Layouts. This path now point to apppath "theme" instead
   of apppath "theme_layouts". This will imply some changes in existing apps, but it will be more flexible and simpler to 
   include files contents of application related to views.
 - modified Peak_Core::initConfig() to support json config file.
 - added property $_allow_comments to class Peak_Config_Json. This option is set to false by default. If true, json file can
   have comment(s) syntax like /* */ and //. Modified methods __construct() and loadString() to support this new property.
 - fixed bug in login() of Peak_Model_Authentication when hashing and salting the password. We use hashStr() now instead.
 - added method hashStr() to class Peak_Model_Authentication
 - added method _filter_phone() to class Peak_Filters_Advanced
 - added the class alias "Peak" to class "Peak_Core" if PHP >= 5.3
 - removed old functions _clean() and _cleans() from Core.php file
 - removed deprecated property $_extensions and methods __call() and ext() from class Peak_Core